--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/RaSt92/RESTful-API#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.8.11",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
