--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/RaSt92/RESTful-API#readme",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "express": "^4.17.1",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1"
